@@ -21,6 +21,7 @@ Date: 2024-12-08
     - Continuing to rerender and model ores and other things.
     - Finally made the patina recipe unlockable at advanced byproduct handling.
     - Changed reactors to require some kind of coolant to actually function - and will explode if they arent getting any liquid, and have fuel inside of them. Have fun!
+    - Finally solved the whole issue of "hey theres no *real* way to make sulfur", by letting you make sulfur from sulfuric acid.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
